--- a/ui/src/lib/styles/root.css
+++ b/ui/src/lib/styles/root.css
@@ -1,12 +1,12 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 @import url("https://use.typekit.net/hkx0bij.css"); /* English Font */
 :root {
-  --font-size-title: 1.6rem;
-  --font-size-subtitle: 1.4rem;
-  --font-size-large: 1.2rem;
-  --font-size-plain: 1.0rem;
-  --font-size-small: .90rem;
-  --font-size-sub: .80rem;
+  --font-size-title: 28px;
+  --font-size-subtitle: 24px;
+  --font-size-large: 18px;
+  --font-size-plain: 13px;
+  --font-size-small: 11px;
+  --font-size-sub: 9px;
   --font-weight-light: 300;
   --font-weight-regular: 400;
   --font-weight-medium: 500;
@@ -31,27 +31,6 @@
 }
 :lang(ko) * {
   font-family: "source-han-serif-kr-subset", sans-serif !important;
-}
-
-@media (max-width: 1280px) {
-  :root {
-    --font-size-title: 1.6rem;
-    --font-size-subtitle: 1.4rem;
-    --font-size-large: 1.2rem;
-    --font-size-plain: 1.0rem;
-    --font-size-small: .90rem;
-    --font-size-sub: .80rem;
-  }
-}
-@media (max-width: 640px) {
-  :root {
-    --font-size-title: 1.4rem;
-    --font-size-subtitle: 1.2rem;
-    --font-size-large: 1.0rem;
-    --font-size-plain: 0.8rem;
-    --font-size-small: 0.7rem;
-    --font-size-sub: 0.6rem;
-  }
 }
 
 /*# sourceMappingURL=root.css.map */
