--- a/ui/src/lib/styles/style.scss
+++ b/ui/src/lib/styles/style.scss
@@ -143,22 +143,26 @@ main {
 
 .contents-form {
   display: grid;
-  gap: 7.2rem;
 
   .contents {
     display: grid;
-    gap: 7.2rem;
-    padding: 3.6rem 0;
+    gap: 72px;
 
     // calendar contents
     &:nth-child(3){
       background-color: var(--color-f9);
     }
 
+    // guestbook contents
+    &:nth-child(8){
+      background-color: var(--color-f9);
+    }
+
     > div{
       display: grid;
       align-content: center;
-      gap: 3.6rem;
+      gap: 36px;
+      padding: 72px 0;
     }
   }
 }
